discussion/kv_engine/174717/174717_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add ReportComputeUnitUsage feature

When set the server adds a frame info for number
of CUs used for read and write in the response
(if non-zero)

Change-Id: I4241aa03c061c1fd3cdb58bb932e77b1183ebdcc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-11 06:40:22.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-11 06:45:55.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46057/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46057/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38682/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7028/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19178/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19178/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20203/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19519/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19519/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18373/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18373/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27578/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27578/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7120/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7120/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16423/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/connection.cc b/daemon/connection.cc
index bbbad8738..f342c2365 100644
--- a/daemon/connection.cc
+++ b/daemon/connection.cc
@@ -1888,7 +1888,7 @@ std::string_view Connection::formatResponseHeaders(Cookie&amp; cookie,
 
         if (wcu) {
             const auto val = htons(gsl::narrow_cast&lt;uint16_t&gt;(wcu));
-            *ptr =WriteComputeUnitsFrameInfoMagic;
+            *ptr = WriteComputeUnitsFrameInfoMagic;
             ptr++;
             memcpy(ptr, &amp;val, sizeof(val));
             ptr += sizeof(val);
diff --git a/include/mcbp/protocol/response.h b/include/mcbp/protocol/response.h
index 603c96cdd..fa9a622a1 100644
--- a/include/mcbp/protocol/response.h
+++ b/include/mcbp/protocol/response.h
@@ -25,9 +25,11 @@ namespace cb::mcbp {
 namespace response {
 /// See BinaryProtocol.md for a description of the available
 /// frame identifiers and their encoding
-enum class FrameInfoId : uint8_t { ServerRecvSendDuration = 0,
-                                   ReadComputeUnits = 1,
-                                   WriteComputeUnits = 2 };
+enum class FrameInfoId : uint8_t {
+    ServerRecvSendDuration = 0,
+    ReadComputeUnits = 1,
+    WriteComputeUnits = 2
+};
 
 /// ServerRecvSendDuration use 1 byte header and 2 byte value
 static constexpr size_t ServerRecvSendDurationFrameInfoSize = 3;

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16423/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17416/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:1837:30: error: no member named "serverless" in namespace "cb" [clang-diagnostic-error]
            auto& inst = cb::serverless::Config::instance();
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17416/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:1837:30:
error: no member named "serverless" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17416/ )
----------------------------------------------------------------------------------------------------------------------
